重构 (spring-aop): 用Collections.singletonList替换List.of
将List.of的用法替换为MyInvocationHandler中的Collections.singletonList
创建一个不可变的拦截器列表。此更改优化了实例化
通过使用更专门的集合来创建单元素列表。singletonList，
已知对于这种情况具有更好的性能特性。